--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <title>Pack DJ 100k - Descarga Directa</title>
 <meta name="description" content="La base de datos definitiva para DJs: Bateas, Remixes y Ediciones Especiales.">
+<link rel="stylesheet" href="style.css">
 
 <div class="dj-container">
     <input type="text" id="djSearch" placeholder="🔍 Buscar packs, géneros o DJs...">
