--- a/index.html
+++ b/index.html
@@ -6,81 +6,180 @@
     <title>Pack DJ 100k - Descarga Directa</title>
     <meta name="description" content="La base de datos definitiva para DJs: Bateas, Remixes y Ediciones Especiales.">
     
-    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Montserrat:wght@900&display=swap');
+
+        :root {
+            --color1: #ff00ea; /* Magenta */
+            --color2: #00e5ff; /* Cyan */
+            --color3: #ffff00; /* Amarillo */
+            --color4: #00ff00; /* Verde */
+            --bg-black: #080808;
+        }
+
+        body {
+            background-color: var(--bg-black);
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            background-attachment: fixed;
+        }
+
+        /* Efecto de luces de fondo */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle at 20% 30%, #ff00ea15, transparent 40%),
+                        radial-gradient(circle at 80% 70%, #00e5ff15, transparent 40%);
+            z-index: -1;
+        }
+
+        .dj-container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        h1 {
+            font-family: 'Bangers', cursive;
+            font-size: clamp(3rem, 10vw, 5rem);
+            text-align: center;
+            color: white;
+            text-shadow: 5px 5px 0px var(--color1), -5px -5px 0px var(--color2);
+            letter-spacing: 5px;
+            margin: 40px 0;
+            transform: rotate(-2deg);
+        }
+
+        #djSearch {
+            width: 100%;
+            padding: 20px;
+            border: 5px solid var(--color2);
+            background: #000;
+            color: var(--color3);
+            font-size: 1.5rem;
+            font-weight: 900;
+            box-shadow: 10px 10px 0px var(--color1);
+            outline: none;
+            box-sizing: border-box;
+            margin-bottom: 40px;
+        }
+
+        .category-title {
+            background: var(--color3);
+            color: black;
+            display: inline-block;
+            padding: 5px 20px;
+            font-size: 1.8rem;
+            text-transform: uppercase;
+            margin: 40px 0 20px 0;
+            transform: skewX(-10deg);
+        }
+
+        .pack-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 25px;
+        }
+
+        .pack-card {
+            background: #111;
+            border: 4px solid white;
+            padding: 20px;
+            transition: 0.3s;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        /* Colores aleatorios de bordes */
+        .pack-card:nth-child(4n+1) { border-color: var(--color1); }
+        .pack-card:nth-child(4n+2) { border-color: var(--color2); }
+        .pack-card:nth-child(4n+3) { border-color: var(--color3); }
+        .pack-card:nth-child(4n+4) { border-color: var(--color4); }
+
+        .pack-card:hover {
+            transform: scale(1.05) rotate(1deg);
+            z-index: 10;
+            background: white;
+        }
+
+        .pack-card:hover h3 { color: black; }
+
+        .pack-card h3 {
+            font-size: 1.2rem;
+            margin: 0 0 15px 0;
+            text-transform: uppercase;
+        }
+
+        .dl-link {
+            display: block;
+            background: black;
+            color: white;
+            text-align: center;
+            padding: 12px;
+            text-decoration: none;
+            font-weight: 900;
+            border: 2px solid black;
+            transition: 0.2s;
+        }
+
+        .pack-card:hover .dl-link {
+            background: var(--color1);
+            animation: pulse 1s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(0.95); }
+            100% { transform: scale(1); }
+        }
+
+        @media (max-width: 600px) {
+            h1 { font-size: 3rem; }
+            .category-title { font-size: 1.4rem; }
+        }
+    </style>
 </head>
 <body>
 
     <div class="dj-container">
         <h1>PACK DJ 100K</h1>
         
-        <input type="text" id="djSearch" placeholder="🔍 Buscar packs, géneros o DJs...">
+        <input type="text" id="djSearch" placeholder="🔍 BUSCAR PACKS O GÉNEROS...">
 
-        <h2 class="category-title">🚀 Imprescindibles y Bateas 2024</h2>
+        <h2 class="category-title">🚀 Imprescindibles</h2>
         <div class="pack-grid">
             <div class="pack-card"><h3>Tutorial Descarga</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1FFo7TRWIw71sPprtYaXLQwIumK24SLbE" target="_blank">ACCEDER</a></div>
             <div class="pack-card"><h3>Originales Batea VIP</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1xRSN4gtrMArerb7s_PfE0g_kncmXHv5q" target="_blank">ACCEDER</a></div>
-            <div class="pack-card"><h3>Diciembre 2024</h3><a class="dl-link" href="https://drive.google.com/drive/folders/10AXmnXy_-ZDkhQHZ6DLccq4Gn828yuyD" target="_blank">ACCEDER</a></div>
-            <div class="pack-card"><h3>Bateas Sep-Oct</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1cEqB3Pq0RNh-TnYRaB5AOxbBEiBFMjE3" target="_blank">ACCEDER</a></div>
-            <div class="pack-card"><h3>Batea Agosto 2024</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1O-CLdzg-cd6lOcqLtjtfU8M3hGDepH5O" target="_blank">ACCEDER</a></div>
-            <div class="pack-card"><h3>Batea Julio P3</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1XmucOIc2WCROvSPW4rt0HTigGEZaTqUC" target="_blank">ACCEDER</a></div>
-            <div class="pack-card"><h3>Batea Julio P2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1dHgC96kah5b8DmZArGbceFRG8UFfGQ2n" target="_blank">ACCEDER</a></div>
-            <div class="pack-card"><h3>Bateas Junio/Julio</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1oVymvsFOnkm31wBSzU_fcnj2oj5acvEZ" target="_blank">ACCEDER</a></div>
-            <div class="pack-card"><h3>Pack Originales Vol 1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1w3yHwin0OSRhBuLdcs-DqBWDfEebsLOC" target="_blank">ACCEDER</a></div>
-            <div class="pack-card"><h3>Pack Originales Vol 2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1j9JV39cQmxxo5fxzm7BZ1UjgeFmiytf9" target="_blank">ACCEDER</a></div>
+            <div class="pack-card"><h3>Bateas 2024 (Dic)</h3><a class="dl-link" href="https://drive.google.com/drive/folders/10AXmnXy_-ZDkhQHZ6DLccq4Gn828yuyD" target="_blank">ACCEDER</a></div>
         </div>
 
-        <h2 class="category-title">🎧 Colección Hits (Vol 10 al 13)</h2>
+        <h2 class="category-title">🎧 Colección Hits Vol 12/13</h2>
         <div class="pack-grid">
             <div class="pack-card"><h3>Cumbia Hits 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1ri3FslBFMf5zGGGYQ503rmd7x3vVZEtX" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Cumbia Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/152AuGl3G-AiRFkhfd93JXp52AFff3a_j" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>Reggaeton Hits 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1L5ZZYzQA73EuRWj7eKb5vCzHGque_S5E" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Reggaeton Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1PHps_7AtgliCZm57G7D1MD1RymrUBo0V" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>RKT-Perreo 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/19jqOVsL3AY8vJJc0hfjc1yvWXhdBDVna" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>RKT-Perreo 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1GqVjg2yC1oMuXtFk3_ROBa71O9KU1yj5" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Trap Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/12F-ocA64NXtb0SoNODPHJKKbAgGT99Gp" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Trap Hits 10</h3><a class="dl-link" href="https://drive.google.com/drive/folders/10ffVFviWYDwJH2XVt0tn71wPM7XcR3OL" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>Tech House 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1N7NE8Me9JHiDVjUruObefcMzmp3vnzBU" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Tech House 10</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1wI05WOIINqekfeoBEsHe8I9YtfBOwc7T" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Pop Music 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1m5F0WXo4otF3dnexj4_xBdEDvq5-o_iu" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Pop Music 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1sSkkRDeTB-XK65n16dGH8J9Ia59Yr_gq" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Electro Latino 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1ULRNQH97c9Dk-M5tmhT3UIG6SBz6Mstu" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Electro Latino 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1KHCTgXJaf4xNqYbSm_8rbIbdsJkCQ1Na" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>Rock Nac. Remix 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/151aavPukX-yLzKt9JygHpwc-wYzGaY84" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Rock Nac. Remix 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1t5uaboAUB2PQv0S0YRzOwROOgPv29hr2" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Salsa Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1hevMX9lHyPyZDd3tbybDrlT1FjtSZFbo" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Salsa Hits 10</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1dM0Yivu27kaYrWRfoJoXo2kmpgJlnbSO" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>Mashups 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1vtnZDrmokTW_ZCUkwq-mpQC7_xsEuYk-" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Mashups 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/10kdf8uZa-BqybcYg1Hba8u0wvXY21A-T" target="_blank">DESCARGAR</a></div>
         </div>
 
-        <h2 class="category-title">🕰️ Special Packs & Retro</h2>
+        <h2 class="category-title">🕰️ Retro & Specials</h2>
         <div class="pack-grid">
             <div class="pack-card"><h3>Retro Hits 90s V2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1aZ2nQOvoVIBiR1aKwxoZVXrw0z1A_FAq" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Retro Hits 90s V1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1cUeu3m53eRKHeM6xzVZvAfuApGB0wL5J" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Old Hits V2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/14RyUfNuY2-h3xAP9EHaK1PqdOIWxY7zg" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Old Hits V1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1vNpew0gC0eePILvjVSVTuxj9hpadEwnW" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>80s Love Hits V3</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1mqunjgy_AZMQmWn34Wz8rdrcNQmqkYPZ" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>80s Love Hits V2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/18yC_s7C3qFdinyCZHcj36ybDci0GqOIW" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>80s Love Hits V1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/168gFzNaZII5zeCaQqm52A8zwxVB4fGOO" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Classic Hits Extended</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1v9TBXqmVt0ft-Dewt4vchWmPZ9nFRpXS" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>Funky Disco</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1iIhflEPGFGTxTNcgFvSUESkjzRZHz5oK" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Disco Hits</h3><a class="dl-link" href="https://drive.google.com/drive/folders/18BKL5iKnMgp5iZFHQ4cPna6_9DQjEQ14" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Latinos Retro 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1CV1FNX_jHQhOJLLYiXqtNPwJ5x_L9NfS" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Retro Cachengue 2023</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1j36QPu3_fiZlVtHEmN4w8Mab8OWbiWv_" target="_blank">DESCARGAR</a></div>
         </div>
 
-        <h2 class="category-title">🛠️ Herramientas, DJs y Varios</h2>
+        <h2 class="category-title">🛠️ Tools & Varios</h2>
         <div class="pack-grid">
             <div class="pack-card"><h3>Intros Show 31</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1x9vKwFztcrlsoTZbLReqc25UBMK6oF5u" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>Transiciones 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1qlGquyzhwEV5dLJiYMMerXliGxYWLwyG" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Transiciones 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1mVu_0u8dgkI7v0R7Gyx_XTBiBb2qGbTs" target="_blank">DESCARGAR</a></div>
             <div class="pack-card"><h3>Samples & FX V4</h3><a class="dl-link" href="https://drive.google.com/drive/folders/15qvvkFgLYiCSLbNrz9WU0vwKoZ0BqHvI" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Gala Mixer 139</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1yk_r5pNhRB8uQ4TzgXCeUFf84ETq567J" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Matias Crow VIP 10</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1fSqDD17mn0nK26j13k0sZsbXmAzFMWT_" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Portal DJs Bolivia 5-8</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1nVUWisGnJPycR7NuuJvT-jSXXhKfGZfl" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Classic Project MP3</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1fAmiGHlaVVkXBN6k3-QIIWHzOhCF2dqF" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Discografía Fito Paez</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1hyKCgKARLtjmZCl9DlaEbXQP7F9szbZn" target="_blank">DESCARGAR</a></div>
-            <div class="pack-card"><h3>Discografía Guasones</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1zwc0eh6d9wXg0iDecI3D2dxTV0cN7lHF" target="_blank">DESCARGAR</a></div>
         </div>
     </div>
 
