--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         <div class="pack-card"><h3>Fito Paez (640 trks)</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1hyKCgKARLtjmZCl9DlaEbXQP7F9szbZn" target="_blank">DESCARGAR</a></div>
         <div class="pack-card"><h3>Guasones</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1zwc0eh6d9wXg0iDecI3D2dxTV0cN7lHF" target="_blank">DESCARGAR</a></div>
         <div class="pack-card"><h3>Carnaval 1.0</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1A4cIZg2PodFrVLWqB7fzREIQPR8ZuuId" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card"><h3>MIXXX DJ</h3><a class="dl-link" href="https://downloads.mixxx.org/releases/2.5.4/mixxx-2.5.4-win64.msi" target="_blank">DESCARGAR</a></div>
     </div>
 </div>
 
