--- a/index.html
+++ b/index.html
@@ -75,83 +75,69 @@
 
 <div class="dj-container">
     <h1>PACK DJ 100K</h1>
-    <input type="text" id="djSearch" placeholder="🔍 BUSCAR GÉNERO, VOLUMEN O ARTISTA...">
+    <input type="text" id="djSearch" placeholder="🔍 BUSCAR GÉNERO, VOLUMEN O PALABRA CLAVE...">
 
     <h2 class="category-title">🚀 Imprescindibles y Bateas</h2>
     <div class="pack-grid">
-        <div class="pack-card"><h3>Tutorial Descarga</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1FFo7TRWIw71sPprtYaXLQwIumK24SLbE" target="_blank">ACCEDER</a></div>
-        <div class="pack-card"><h3>Originales Batea VIP</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1xRSN4gtrMArerb7s_PfE0g_kncmXHv5q" target="_blank">ACCEDER</a></div>
-        <div class="pack-card"><h3>Diciembre 2024</h3><a class="dl-link" href="https://drive.google.com/drive/folders/10AXmnXy_-ZDkhQHZ6DLccq4Gn828yuyD" target="_blank">ACCEDER</a></div>
-        <div class="pack-card"><h3>Bateas Sep-Oct</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1cEqB3Pq0RNh-TnYRaB5AOxbBEiBFMjE3" target="_blank">ACCEDER</a></div>
+        <div class="pack-card" data-tags="ayuda como bajar guia tutorial"><h3>Tutorial Descarga</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1FFo7TRWIw71sPprtYaXLQwIumK24SLbE" target="_blank">ACCEDER</a></div>
+        <div class="pack-card" data-tags="exclusivo promo batea vip original"><h3>Originales Batea VIP</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1xRSN4gtrMArerb7s_PfE0g_kncmXHv5q" target="_blank">ACCEDER</a></div>
+        <div class="pack-card" data-tags="fin de año fiesta 2024"><h3>Diciembre 2024</h3><a class="dl-link" href="https://drive.google.com/drive/folders/10AXmnXy_-ZDkhQHZ6DLccq4Gn828yuyD" target="_blank">ACCEDER</a></div>
+        <div class="pack-card" data-tags="primavera batea"><h3>Bateas Sep-Oct</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1cEqB3Pq0RNh-TnYRaB5AOxbBEiBFMjE3" target="_blank">ACCEDER</a></div>
         <div class="pack-card"><h3>Batea Agosto</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1O-CLdzg-cd6lOcqLtjtfU8M3hGDepH5O" target="_blank">ACCEDER</a></div>
         <div class="pack-card"><h3>Batea Julio P3</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1XmucOIc2WCROvSPW4rt0HTigGEZaTqUC" target="_blank">ACCEDER</a></div>
         <div class="pack-card"><h3>Batea Julio P2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1dHgC96kah5b8DmZArGbceFRG8UFfGQ2n" target="_blank">ACCEDER</a></div>
         <div class="pack-card"><h3>Junio / Julio</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1oVymvsFOnkm31wBSzU_fcnj2oj5acvEZ" target="_blank">ACCEDER</a></div>
-        <div class="pack-card"><h3>Originales Vol 1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1w3yHwin0OSRhBuLdcs-DqBWDfEebsLOC" target="_blank">ACCEDER</a></div>
-        <div class="pack-card"><h3>Originales Vol 2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1j9JV39cQmxxo5fxzm7BZ1UjgeFmiytf9" target="_blank">ACCEDER</a></div>
+        <div class="pack-card" data-tags="raw clean wav mp3"><h3>Originales Vol 1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1w3yHwin0OSRhBuLdcs-DqBWDfEebsLOC" target="_blank">ACCEDER</a></div>
+        <div class="pack-card" data-tags="raw clean wav mp3"><h3>Originales Vol 2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1j9JV39cQmxxo5fxzm7BZ1UjgeFmiytf9" target="_blank">ACCEDER</a></div>
     </div>
 
-    <h2 class="category-title">🎧 Hits por Género (Vol 10-13)</h2>
+    <h2 class="category-title">🎧 Hits por Género</h2>
     <div class="pack-grid">
-        <div class="pack-card"><h3>Cumbia Hits 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1ri3FslBFMf5zGGGYQ503rmd7x3vVZEtX" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Cumbia Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/152AuGl3G-AiRFkhfd93JXp52AFff3a_j" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Reggaeton Hits 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1L5ZZYzQA73EuRWj7eKb5vCzHGque_S5E" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Reggaeton Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1PHps_7AtgliCZm57G7D1MD1RymrUBo0V" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>RKT-Perreo 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/19jqOVsL3AY8vJJc0hfjc1yvWXhdBDVna" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>RKT-Perreo 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1GqVjg2yC1oMuXtFk3_ROBa71O9KU1yj5" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Trap Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/12F-ocA64NXtb0SoNODPHJKKbAgGT99Gp" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Trap Hits 10</h3><a class="dl-link" href="https://drive.google.com/drive/folders/10ffVFviWYDwJH2XVt0tn71wPM7XcR3OL" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Tech House 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1N7NE8Me9JHiDVjUruObefcMzmp3vnzBU" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Tech House 10</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1wI05WOIINqekfeoBEsHe8I9YtfBOwc7T" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Pop Music 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1m5F0WXo4otF3dnexj4_xBdEDvq5-o_iu" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Pop Music 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1sSkkRDeTB-XK65n16dGH8J9Ia59Yr_gq" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Electro Latino 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1ULRNQH97c9Dk-M5tmhT3UIG6SBz6Mstu" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Electro Latino 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1KHCTgXJaf4xNqYbSm_8rbIbdsJkCQ1Na" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Rock Nac. Remix 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/151aavPukX-yLzKt9JygHpwc-wYzGaY84" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Rock Nac. Remix 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1t5uaboAUB2PQv0S0YRzOwROOgPv29hr2" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Salsa Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1hevMX9lHyPyZDd3tbybDrlT1FjtSZFbo" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Salsa Hits 10</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1dM0Yivu27kaYrWRfoJoXo2kmpgJlnbSO" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Mashups 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1vtnZDrmokTW_ZCUkwq-mpQC7_xsEuYk-" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Mashups 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/10kdf8uZa-BqybcYg1Hba8u0wvXY21A-T" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="tropical fiesta cuarteto"><h3>Cumbia Hits 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1ri3FslBFMf5zGGGYQ503rmd7x3vVZEtX" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="tropical fiesta cuarteto"><h3>Cumbia Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/152AuGl3G-AiRFkhfd93JXp52AFff3a_j" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="perreo urbano sandungueo"><h3>Reggaeton Hits 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1L5ZZYzQA73EuRWj7eKb5vCzHGque_S5E" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="perreo urbano sandungueo"><h3>Reggaeton Hits 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1PHps_7AtgliCZm57G7D1MD1RymrUBo0V" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="turreo argentina remix"><h3>RKT-Perreo 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/19jqOVsL3AY8vJJc0hfjc1yvWXhdBDVna" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="turreo argentina remix"><h3>RKT-Perreo 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1GqVjg2yC1oMuXtFk3_ROBa71O9KU1yj5" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="house electronica dance"><h3>Tech House 11</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1N7NE8Me9JHiDVjUruObefcMzmp3vnzBU" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="mainstream radio top 40"><h3>Pop Music 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1m5F0WXo4otF3dnexj4_xBdEDvq5-o_iu" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="edit herramientas intro"><h3>Mashups 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1vtnZDrmokTW_ZCUkwq-mpQC7_xsEuYk-" target="_blank">DESCARGAR</a></div>
     </div>
 
     <h2 class="category-title">🕰️ Retro & Classics</h2>
     <div class="pack-grid">
-        <div class="pack-card"><h3>Retro Hits 90s V2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1aZ2nQOvoVIBiR1aKwxoZVXrw0z1A_FAq" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Retro Hits 90s V1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1cUeu3m53eRKHeM6xzVZvAfuApGB0wL5J" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Old Hits V2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/14RyUfNuY2-h3xAP9EHaK1PqdOIWxY7zg" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Old Hits V1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1vNpew0gC0eePILvjVSVTuxj9hpadEwnW" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>80s Love V3</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1mqunjgy_AZMQmWn34Wz8rdrcNQmqkYPZ" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>80s Love V2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/18yC_s7C3qFdinyCZHcj36ybDci0GqOIW" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>80s Love V1</h3><a class="dl-link" href="https://drive.google.com/drive/folders/168gFzNaZII5zeCaQqm52A8zwxVB4fGOO" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Classic Extended</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1v9TBXqmVt0ft-Dewt4vchWmPZ9nFRpXS" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Funky Disco</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1iIhflEPGFGTxTNcgFvSUESkjzRZHz5oK" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Disco Hits</h3><a class="dl-link" href="https://drive.google.com/drive/folders/18BKL5iKnMgp5iZFHQ4cPna6_9DQjEQ14" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Latinos Retro 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1CV1FNX_jHQhOJLLYiXqtNPwJ5x_L9NfS" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Retro Cachengue</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1j36QPu3_fiZlVtHEmN4w8Mab8OWbiWv_" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="viejitos clasicos noventas"><h3>Retro Hits 90s V2</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1aZ2nQOvoVIBiR1aKwxoZVXrw0z1A_FAq" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="viejitos clasicos ochentas"><h3>80s Love V3</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1mqunjgy_AZMQmWn34Wz8rdrcNQmqkYPZ" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="viejitos cachengue clasicos"><h3>Retro Cachengue</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1j36QPu3_fiZlVtHEmN4w8Mab8OWbiWv_" target="_blank">DESCARGAR</a></div>
     </div>
 
     <h2 class="category-title">🛠️ Herramientas & Especiales</h2>
     <div class="pack-grid">
-        <div class="pack-card"><h3>Intros Show 31</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1x9vKwFztcrlsoTZbLReqc25UBMK6oF5u" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Transiciones 13</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1qlGquyzhwEV5dLJiYMMerXliGxYWLwyG" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Transiciones 12</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1mVu_0u8dgkI7v0R7Gyx_XTBiBb2qGbTs" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Samples & FX V4</h3><a class="dl-link" href="https://drive.google.com/drive/folders/15qvvkFgLYiCSLbNrz9WU0vwKoZ0BqHvI" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Gala Mixer 139</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1yk_r5pNhRB8uQ4TzgXCeUFf84ETq567J" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Matias Crow 10</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1fSqDD17mn0nK26j13k0sZsbXmAzFMWT_" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Portal Bolivia</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1nVUWisGnJPycR7NuuJvT-jSXXhKfGZfl" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Fito Paez (640 trks)</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1hyKCgKARLtjmZCl9DlaEbXQP7F9szbZn" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Guasones</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1zwc0eh6d9wXg0iDecI3D2dxTV0cN7lHF" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>Carnaval 1.0</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1A4cIZg2PodFrVLWqB7fzREIQPR8ZuuId" target="_blank">DESCARGAR</a></div>
-        <div class="pack-card"><h3>MIXXX DJ</h3><a class="dl-link" href="https://downloads.mixxx.org/releases/2.5.4/mixxx-2.5.4-win64.msi" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="fx efectos sonidos samples"><h3>Samples & FX V4</h3><a class="dl-link" href="https://drive.google.com/drive/folders/15qvvkFgLYiCSLbNrz9WU0vwKoZ0BqHvI" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="rock nacional argentina fito"><h3>Fito Paez (640 trks)</h3><a class="dl-link" href="https://drive.google.com/drive/folders/1hyKCgKARLtjmZCl9DlaEbXQP7F9szbZn" target="_blank">DESCARGAR</a></div>
+        <div class="pack-card" data-tags="mixxx software programa pc controlador virtual dj virtualdj">
+            <h3>MIXXX DJ</h3>
+            <a class="dl-link" href="https://downloads.mixxx.org/releases/2.5.4/mixxx-2.5.4-win64.msi" target="_blank">DESCARGAR</a>
+        </div>
     </div>
 </div>
 
 <script>
     document.getElementById('djSearch').addEventListener('keyup', function() {
         let filter = this.value.toLowerCase();
+        // Buscamos todas las tarjetas
         document.querySelectorAll('.pack-card').forEach(card => {
-            card.style.display = card.innerText.toLowerCase().includes(filter) ? "" : "none";
+            // Texto visible (título)
+            let title = card.querySelector('h3').innerText.toLowerCase();
+            // Texto escondido (tags)
+            let tags = card.getAttribute('data-tags') ? card.getAttribute('data-tags').toLowerCase() : "";
+            
+            // Si el filtro coincide con el título O con las etiquetas
+            if (title.includes(filter) || tags.includes(filter)) {
+                card.style.display = "";
+            } else {
+                card.style.display = "none";
+            }
         });
     });
 </script>
