--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pack DJ 100k - Private Dashboard</title>
+    <title>Pack DJ 100k - Real Time</title>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
     <style>
@@ -11,20 +11,6 @@
         :root { --color1: #ff00ea; --color2: #00e5ff; --color3: #ffff00; --color4: #00ff00; --bg-black: #050505; }
         
         body { background-color: var(--bg-black); color: white; font-family: 'Montserrat', sans-serif; margin: 0; overflow-x: hidden; }
-
-        /* Pantalla de Bloqueo */
-        #login-overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: var(--bg-black); z-index: 9999; display: flex;
-            flex-direction: column; align-items: center; justify-content: center;
-        }
-        .login-box {
-            background: #111; padding: 40px; border: 4px solid var(--color1);
-            text-align: center; box-shadow: 0 0 30px var(--color1); width: 90%; max-width: 400px;
-        }
-        .login-box h2 { font-family: 'Bangers'; font-size: 2.5rem; color: var(--color3); margin: 0 0 20px 0; }
-        .login-box input { width: 80%; padding: 15px; border: 2px solid var(--color2); background: #000; color: white; text-align: center; font-size: 1.2rem; margin-bottom: 20px; }
-        .login-box button { padding: 10px 30px; background: var(--color1); border: none; color: white; font-weight: 900; cursor: pointer; }
 
         /* Fondo y UI */
         .ambient-light { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; opacity: 0.15; pointer-events: none; }
@@ -36,7 +22,7 @@
         .sidebar-stats { position: fixed; right: 20px; top: 20px; background: rgba(0,0,0,0.9); border: 2px solid var(--color2); padding: 15px; border-radius: 12px; z-index: 1000; text-align: center; font-size: 0.8rem; }
         .sidebar-stats b { color: var(--color4); font-size: 1.1rem; display: block; }
         
-        #social-pop { position: fixed; left: -400px; bottom: 30px; background: white; color: black; padding: 12px; border-radius: 8px; font-size: 0.8rem; font-weight: 900; transition: 0.6s; z-index: 2000; border-left: 6px solid var(--color1); }
+        #social-pop { position: fixed; left: -400px; bottom: 30px; background: white; color: black; padding: 12px; border-radius: 8px; font-size: 0.8rem; font-weight: 900; transition: 0.6s; z-index: 2000; border-left: 6px solid var(--color1); box-shadow: 0 5px 15px rgba(0,0,0,0.5); }
 
         .dj-container { max-width: 1100px; margin: auto; padding: 20px; }
         h1 { font-family: 'Bangers', cursive; font-size: clamp(3rem, 8vw, 5rem); text-align: center; text-shadow: 5px 5px var(--color1); margin: 30px 0; }
@@ -46,25 +32,17 @@
         /* Grid y Cards */
         .category-label { background: var(--color3); color: black; padding: 5px 15px; font-weight: 900; display: inline-block; margin: 20px 0; transform: skewX(-10deg); }
         .pack-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; margin-bottom: 40px; }
-        .pack-card { background: rgba(20,20,20,0.95); border: 2px solid white; padding: 20px; transition: 0.3s; position: relative; }
+        .pack-card { background: rgba(20,20,20,0.95); border: 2px solid white; padding: 20px; transition: 0.3s; position: relative; display: flex; flex-direction: column; justify-content: space-between; }
         .pack-card:hover { transform: translateY(-5px); background: white; color: black; border-color: var(--color1); }
         .dl-counter { font-size: 0.7rem; font-weight: 900; color: var(--color2); display: block; margin-bottom: 10px; }
         .pack-card:hover .dl-counter { color: #555; }
         .dl-link { display: block; background: black; color: white; text-align: center; padding: 12px; text-decoration: none; font-weight: 900; margin-top: 10px; }
+        .pack-card:hover .dl-link { background: var(--color1); }
         .fav-btn { position: absolute; top: 10px; right: 10px; background: none; border: none; font-size: 1.5rem; color: #333; cursor: pointer; }
         .fav-btn.active { color: var(--color1) !important; }
     </style>
 </head>
 <body>
-
-<div id="login-overlay">
-    <div class="login-box">
-        <h2>SISTEMA BLOQUEADO</h2>
-        <input type="password" id="pass-input" placeholder="CONTRASEÑA DEL MES">
-        <button onclick="checkPass()">INGRESAR</button>
-        <p id="login-error" style="color:red; display:none; margin-top:10px;">Clave Incorrecta</p>
-    </div>
-</div>
 
 <div class="ambient-light"><div class="orb orb1"></div><div class="orb orb2"></div></div>
 
@@ -95,68 +73,23 @@
         </div>
     </div>
 
-    <div class="category-label">💾 CLASSICS / RETRO</div>
-    <div class="pack-grid">
-        <div class="pack-card" data-tags="90s 80s retro clasicos" data-id="p_retro_hits">
-            <button class="fav-btn" onclick="toggleFav('p_retro_hits', this)">★</button>
-            <span class="dl-counter">DESCARGAS: <span id="count-p_retro_hits">0</span></span>
-            <h3>Mega Retro Hits</h3>
-            <a class="dl-link" href="#" onclick="trackDL('p_retro_hits')" target="_blank">DESCARGAR</a>
-        </div>
-    </div>
-
     <div class="category-label">🛠 TOOLS / SOFTWARE</div>
     <div class="pack-grid">
         <div class="pack-card" data-tags="software programa mixxx dj pc" data-id="p_mixxx">
             <button class="fav-btn" onclick="toggleFav('p_mixxx', this)">★</button>
             <span class="dl-counter">DESCARGAS: <span id="count-p_mixxx">0</span></span>
-            <h3>MIXXX DJ Pro</h3>
+            <h3>MIXXX Pro</h3>
             <a class="dl-link" href="https://mixxx.org/download/" onclick="trackDL('p_mixxx')" target="_blank">DESCARGAR</a>
-        </div>
-        <div class="pack-card" data-tags="fx efectos bocinas samples" data-id="p_fx_horns">
-            <button class="fav-btn" onclick="toggleFav('p_fx_horns', this)">★</button>
-            <span class="dl-counter">DESCARGAS: <span id="count-p_fx_horns">0</span></span>
-            <h3>FX Pack (Bocinas & Air)</h3>
-            <a class="dl-link" href="#" onclick="trackDL('p_fx_horns')" target="_blank">DESCARGAR</a>
         </div>
     </div>
 </div>
 
 <script>
-    // ESTO SE INYECTA DESDE GITHUB SECRETS
+    // INYECTADO POR GITHUB ACTIONS
     const firebaseConfig = __FIREBASE_CONFIG_PLACEHOLDER__;
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-
-    // SEGURIDAD
-    let currentPass = "";
-    function initSecurity() {
-        db.ref('access_config/password').on('value', snap => {
-            if (!snap.exists()) {
-                const newPass = Math.random().toString(36).substring(2, 8).toUpperCase();
-                db.ref('access_config').set({ password: newPass, last_update: Date.now() });
-            } else {
-                currentPass = snap.val();
-                const saved = localStorage.getItem('dj_pass');
-                const savedTime = localStorage.getItem('dj_time');
-                if (saved === currentPass && (Date.now() - savedTime < 2592000000)) {
-                    document.getElementById('login-overlay').style.display = 'none';
-                }
-            }
-        });
-    }
-
-    function checkPass() {
-        const val = document.getElementById('pass-input').value.toUpperCase();
-        if (val === currentPass) {
-            localStorage.setItem('dj_pass', val);
-            localStorage.setItem('dj_time', Date.now());
-            document.getElementById('login-overlay').style.display = 'none';
-        } else {
-            document.getElementById('login-error').style.display = 'block';
-        }
-    }
 
     // ONLINE USERS
     const onlineRef = db.ref('online_users');
@@ -170,7 +103,52 @@
         db.ref('global_downloads').transaction(v => (v || 0) + 1);
     }
 
+    // SINCRONIZACION EN VIVO
     db.ref('packs').on('value', snap => {
         const data = snap.val();
         for(let id in data) {
             const el = document.getElementById('count-' + id);
+            if(el) el.innerText = (data[id] || 0).toLocaleString();
+        }
+    });
+
+    db.ref('global_downloads').on('value', snap => {
+        document.getElementById('global-total').innerText = (snap.val() || 0).toLocaleString();
+    });
+
+    // BUSCADOR
+    document.getElementById('djSearch').addEventListener('keyup', function() {
+        let q = this.value.toLowerCase();
+        document.querySelectorAll('.pack-card').forEach(card => {
+            let txt = (card.getAttribute('data-tags') || "") + card.innerText.toLowerCase();
+            card.style.display = txt.includes(q) ? "" : "none";
+        });
+    });
+
+    // FAVORITOS LOCALES
+    let favs = JSON.parse(localStorage.getItem('djFavs')) || [];
+    function toggleFav(id, btn) {
+        if(favs.includes(id)) favs = favs.filter(f => f !== id);
+        else favs.push(id);
+        localStorage.setItem('djFavs', JSON.stringify(favs));
+        btn.classList.toggle('active');
+    }
+
+    // NOTIFICACIONES FAKE
+    function socialPop() {
+        const users = ["DJ Nico", "DJ Flow", "Mati", "Christian", "Seba DJ", "DJ Gonza", "DJ Luquitas"];
+        const user = users[Math.floor(Math.random()*users.length)];
+        document.getElementById('pop-text').innerHTML = `🎧 <b>${user}</b> descargó un pack`;
+        const pop = document.getElementById('social-pop');
+        pop.style.left = "20px";
+        setTimeout(() => pop.style.left = "-400px", 4000);
+    }
+    setInterval(socialPop, 20000);
+
+    // Cargar favs visualmente
+    document.querySelectorAll('.pack-card').forEach(card => {
+        if(favs.includes(card.getAttribute('data-id'))) card.querySelector('.fav-btn').classList.add('active');
+    });
+</script>
+</body>
+</html>
